feat: add basic button support
